code/dotnet/FactSetTickHistory/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.FactSetTickHistory)](https://www.nuget.org/packages/FactSet.SDK.FactSetTickHistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Tick History **Level 2** provides dynamic access to the historical tick data up to 10 levels of depth for a specific security for specific dates or date range. The API generates output files with data based on client-specified input parameters. The input parameters include universe specification and date ranges for which the data will be generated. When the API request with specified input parameters has been completed, the output files will be made available back to the users through a secure URL to the location where the files are stored. Therefore, this API has two APIs (i) Request files API (ii) Get Files API.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- Package version: 0.0.2
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FactSetTickHistory
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FactSetTickHistory
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FactSetTickHistory.Api;
using FactSet.SDK.FactSetTickHistory.Client;
using FactSet.SDK.FactSetTickHistory.Model;

namespace Example
{
    public static class GetTickHistoryFilesLevel2Example
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FactSetTickHistory.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new GetFilesLevel2BETAApi(config);
            var requestId = "requestId_example";  // string | RequestId returned by request-files endpoint to poll and collect results of the query
            var paginationLimit = 20;  // int? | Specifies the maximum number of results to return per response page (optional)  (default to 20)
            var paginationOffset = 0;  // int? | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results (optional)  (default to 0)

            try
            {
                // Returns the files for the requested requestId
                GetFilesResponseLevel2 result = apiInstance.GetTickHistoryFilesLevel2(requestId, paginationLimit, paginationOffset);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling GetFilesLevel2BETAApi.GetTickHistoryFilesLevel2: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/bulk-documents/tick-history/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*GetFilesLevel2BETAApi* | [**GetTickHistoryFilesLevel2**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/GetFilesLevel2BETAApi.md#gettickhistoryfileslevel2) | **GET** /level2/get-files | Returns the files for the requested requestId
*RequestFilesLevel2BETAApi* | [**GetrequestIdLevel2**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/RequestFilesLevel2BETAApi.md#getrequestidlevel2) | **GET** /level2/request-files | Returns the requestId and status


## Documentation for Models

 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/ErrorExample.md)
 - [Model.Files](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/Files.md)
 - [Model.GetFilesResponseLevel2](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/GetFilesResponseLevel2.md)
 - [Model.IsPartial](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/IsPartial.md)
 - [Model.Level2RequestFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/Level2RequestFilesResponse.md)
 - [Model.Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/Meta.md)
 - [Model.Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/Pagination.md)
 - [Model.Status](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v0/docs/Status.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
