code/dotnet/FactSetTickHistory/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for .NET

[![API Version](https://img.shields.io/badge/api-v1.1.0-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.FactSetTickHistory)](https://www.nuget.org/packages/FactSet.SDK.FactSetTickHistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

TickHistory provides dynamic access to historical tick data for a specific security for specific dates or date range.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.1.0
- SDK version: 0.22.10
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FactSetTickHistory -v 0.22.10
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FactSetTickHistory -Version 0.22.10
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FactSetTickHistory.Api;
using FactSet.SDK.FactSetTickHistory.Client;
using FactSet.SDK.FactSetTickHistory.Model;

namespace Example
{
    public static class V1GetFilesGetExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FactSetTickHistory.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new GetFilesApi(config);
            var requestId = "requestId_example";  // string | RequestId returned by request-files endpoint to poll and collect results of the query
            var paginationLimit = 20;  // int? | Specifies the maximum number of results to return per response page (optional)  (default to 20)
            var paginationOffset = 0;  // int? | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results (optional)  (default to 0)

            try
            {
                // Returns the files from tickhistory endpoint for the specified date range
                GetFilesResponse result = apiInstance.V1GetFilesGet(requestId, paginationLimit, paginationOffset);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling GetFilesApi.V1GetFilesGet: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com/bulk-documents/tickhistory*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*GetFilesApi* | [**V1GetFilesGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/GetFilesApi.md#v1getfilesget) | **GET** /v1/get-files | Returns the files from tickhistory endpoint for the specified date range
*RequestFilesApi* | [**V1RequestFilesGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/RequestFilesApi.md#v1requestfilesget) | **GET** /v1/request-files | Returns the requestId and status


## Documentation for Models

 - [Model.Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/Data.md)
 - [Model.GetFilesErrorDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/GetFilesErrorDetail.md)
 - [Model.GetFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/GetFilesResponse.md)
 - [Model.GetFilesStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/GetFilesStatus.md)
 - [Model.Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/Meta.md)
 - [Model.Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/Pagination.md)
 - [Model.Partial](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/Partial.md)
 - [Model.RequestFileErrorDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/RequestFileErrorDetails.md)
 - [Model.RequestFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/RequestFilesResponse.md)
 - [Model.RequestFilestatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v1/docs/RequestFilestatus.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
